---
source: tests/integration/commands/help.rs
expression: stdout
---
jjpwrgem json parser with really good error messages

Usage: jjp <COMMAND>

Commands:
  format  Make your json look really good
  check   Validates json syntax
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Examples:
    $ echo -en '{ "rust":"is a must"   } ' | jjp format
    {
        "rust": "is a must"
    }

    $ echo -en '{"coolKey"}' | jjp check
    error: expected colon after key, found `}`
    --> stdin:1:11
    |
    1 | {"coolKey"}
    |  ---------^
    |  |
    |  expected due to `"coolKey"`
    |
    help: insert colon and placeholder value
    |
    1 | {"coolKey": "🐟🛹"}
    |           ++++++++
